修复部分情况下配置未加载的问题